--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Pacotes principais
+# Main packages
 fastf1>=3.1.8
 scikit-learn>=1.0.2
 pandas>=1.3.0
@@ -8,7 +8,7 @@ seaborn>=0.11.0
 xgboost>=1.5.0
 lightgbm>=3.3.0
 
-# Para desenvolvimento
+# For development
 jupyter>=1.0.0
 jupyterlab>=3.0.0
 ipykernel>=6.0.0
