--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ seaborn>=0.11.0
 xgboost>=1.5.0
 lightgbm>=3.3.0
 
-# For development
+# Development
 jupyter>=1.0.0
 jupyterlab>=3.0.0
 ipykernel>=6.0.0
